--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,10 +56,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: BigShouldersDisplay
-  #     fonts:
-  #       - asset: assets\fonts\BigShouldersDisplayLight.ttf
+  fonts:
+    - family: BigShouldersDisplay
+      fonts:
+        - asset: assets/fonts/BigShouldersDisplay-Light.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
